--- a/index.html
+++ b/index.html
@@ -24,28 +24,63 @@
 
 <body>
   <div class="container">
+    <div class="row">
 
-    <div class="intro-copy">
-      <h1>10,000+ of our users love our products.</h1>
+      <div class="col-md-6 col-sm">
 
-      <p>We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.</p>
+
+        <div class="intro-copy">
+          <h1>10,000+ of our users love our products.</h1>
+
+          <p class="description">We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.</p>
+        </div>
+      </div>
+      <div class="col-md-6 col-sm">
+        <div class="ratings d-flex flex-column">
+          <div class="rating-box align-self-start">
+            <div class="star-group">
+
+
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star"></div>
+            Rated 5 Stars in Reviews
+          </div>
+          <div class="rating-box align-self-center">
+            <div class="star-group">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star"></div>
+            Rated 5 Stars in Report Guru
+          </div>
+          <div class="rating-box align-self-end">
+            <div class="star-group">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star"></div>
+            Rated 5 Stars in BestTech
+          </div>
+
+        </div>
+      </div>
     </div>
-
-    <div class="ratings">
-      Rated 5 Stars in Reviews
-      Rated 5 Stars in Report Guru
-      Rated 5 Stars in BestTech
-    </div>
-
     <div class="row">
 
       <div class="col-md-4 col-sm">
-        <div class="quote-box card">
+        <div class="quote-box card h-100">
           <div class="card-header">
             <img class="portrait" src="images/image-colton.jpg" alt="Portrait">
-            <p class="person">Colton Smith</p>
-            <p class="verified">Verified Buyer</p>
+            <div class="identity">
+              <p class="person">Colton Smith</p>
+              <p class="verified">Verified Buyer</p>
+            </div>
           </div>
           <p class="quote">
             "We needed the same printed design as the one we had ordered a week prior.
@@ -56,13 +91,13 @@
 
 
       <div class="col-md-4 col-sm">
-        <div class="quote-box card">
+        <div class="quote-box card h-100">
           <div class="card-header">
             <img class="portrait" src="images/image-irene.jpg" alt="Portrait">
             <div class="identity">
-            <p class="person">Irene Roberts</p>
-            <p class="verified">Verified Buyer</p>
-</div>
+              <p class="person">Irene Roberts</p>
+              <p class="verified">Verified Buyer</p>
+            </div>
           </div>
           <p class="quote">
             "Customer service is always excellent and very quick turn around. Completely
@@ -71,12 +106,13 @@
       </div>
 
       <div class="col-md-4 col-sm">
-        <div class="quote-box card">
+        <div class="quote-box card h-100">
           <div class="card-header">
             <img class="portrait" src="images/image-anne.jpg" alt="Portrait">
-            <div class="identity"><p class="person">Anne Wallace</p>
-            <p class="verified">Verified Buyer</p>
-          </div>
+            <div class="identity">
+              <p class="person">Anne Wallace</p>
+              <p class="verified">Verified Buyer</p>
+            </div>
           </div>
           <p class="quote">
             "Put an order with this company and can only praise them for the very high
