Further layout fixes

--- a/index.html
+++ b/index.html
@@ -38,40 +38,41 @@
       </div>
       <div class="col-md-6 col-sm">
         <div class="ratings d-flex flex-column">
-          <div class="rating-box align-self-start">
+          <div class="rating-box rating-box1">
             <div class="star-group">
-
-
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star"></div>
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+            </div>
             Rated 5 Stars in Reviews
           </div>
-          <div class="rating-box align-self-center">
+          <div class="rating-box rating-box2">
             <div class="star-group">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star"></div>
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+            </div>
             Rated 5 Stars in Report Guru
           </div>
-          <div class="rating-box align-self-end">
+          <div class="rating-box rating-box3">
             <div class="star-group">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star">
-            <img src="images/icon-star.svg" alt="star"></div>
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+              <img src="images/icon-star.svg" alt="star">
+            </div>
             Rated 5 Stars in BestTech
           </div>
 
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="all-quotes row">
 
       <div class="col-md-4 col-sm">
         <div class="quote-box card h-100">
@@ -91,7 +92,7 @@
 
 
       <div class="col-md-4 col-sm">
-        <div class="quote-box card h-100">
+        <div class="quote-box middle-card card h-100">
           <div class="card-header">
             <img class="portrait" src="images/image-irene.jpg" alt="Portrait">
             <div class="identity">
@@ -106,7 +107,7 @@
       </div>
 
       <div class="col-md-4 col-sm">
-        <div class="quote-box card h-100">
+        <div class="quote-box right-card card h-100">
           <div class="card-header">
             <img class="portrait" src="images/image-anne.jpg" alt="Portrait">
             <div class="identity">
